--- a/frontend/src/app/ui/footer/footer.component.html
+++ b/frontend/src/app/ui/footer/footer.component.html
@@ -2,31 +2,31 @@
   <div class="container">
     <div class="row ">
       <div class="col-sm-12 col-md">
-        <a [routerLink]="['']"><img src="/assets/img/logo.png"></a>
+        <a routerLink="['']"><img src="/assets/img/logo.png"></a>
       </div>
       <div class="col-sm-12 col-md">
         <ul>
           <li class="footer-title">Product</li>
-          <li><a [routerLink]="['vertegenwoordigers']" routerLinkActive="active">Volksvertegenwoordigers</a></li>
-          <li><a [routerLink]="['overheid']" routerLinkActive="active">Overheid</a></li>
-          <li><a [routerLink]="['bewoners']" routerLinkActive="active">Bewoners</a></li>
-          <li><a [routerLink]="['organisaties']" routerLinkActive="active">Organisaties</a></li>
+          <li><a routerLink="['vertegenwoordigers']" routerLinkActive="active">Volksvertegenwoordigers</a></li>
+          <li><a routerLink="['overheid']" routerLinkActive="active">Overheid</a></li>
+          <li><a routerLink="['bewoners']" routerLinkActive="active">Bewoners</a></li>
+          <li><a routerLink="['organisaties']" routerLinkActive="active">Organisaties</a></li>
         </ul>
       </div>
       <div class="col-sm-12 col-md">
         <ul>
           <li class="footer-title">Bedrijf</li>
-          <li><a [routerLink]="['about']" routerLinkActive="active">About</a></li>
-          <li><a [routerLink]="['contact']" routerLinkActive="active">Contact</a></li>
-          <li><a [routerLink]="['brand-assets']" routerLinkActive="active">Brand assets</a></li>
+          <li><a routerLink="['about']" routerLinkActive="active">About</a></li>
+          <li><a routerLink="['contact']" routerLinkActive="active">Contact</a></li>
+          <li><a routerLink="['brand-assets']" routerLinkActive="active">Brand assets</a></li>
         </ul>
       </div>
       <div class="col-sm-12 col-md">
         <ul>
           <li class="footer-title">Support</li>
-          <li><a [routerLink]="['faq']" routerLinkActive="active">FAQ</a></li>
-          <li><a [routerLink]="['terms']" routerLinkActive="active">Terms &amp; Conditions</a></li>
-          <li><a [routerLink]="['privacy']" routerLinkActive="active">Privacy Policy</a></li>
+          <li><a routerLink="['faq']" routerLinkActive="active">FAQ</a></li>
+          <li><a routerLink="['terms']" routerLinkActive="active">Terms &amp; Conditions</a></li>
+          <li><a routerLink="['privacy']" routerLinkActive="active">Privacy Policy</a></li>
         </ul>
       </div>
       <div class="col-sm-12 col-md">
