--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-nav></app-nav>
+<top-nav></top-nav>
+
 <section class="page-content">
   <alert></alert>
   <router-outlet></router-outlet>
 </section>
 
 <app-footer></app-footer>
-
-<div class="loader" *ngIf="loading" style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; background-color: rgba(255,255,255,0.9); text-align:center; padding-top: 200px;"><i class="fa fa-spinner fa-spin fa-3x"></i><br><br><h3>loading</h3></div>
